--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="all.css" type="text/css">
   </head>
   <body>
     <h1 class='header'>HELLO</h1>
 
-    <script src="index.js"></script>
+    <script src="all.js"></script>
   </body>
 </html>
