--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="all.css" type="text/css">
   </head>
   <body>
-    <h1 class='header'>HELLO</h1>
+    <h1 class='header'>HELLO ITS ME</h1>
 
     <script src="all.js"></script>
   </body>
